<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="song_count">%d brani</string>
    <string name="no_songs">Nessun brano trovato sul dispositivo</string>
    <string name="no_song_playing">Nessun brano</string>
    <string name="music_player_title">🎵 Music Player</string>
    <string name="cd_album_art">Copertina</string>
    <string name="cd_previous">Precedente</string>
    <string name="cd_play_pause">Play/Pausa</string>
    <string name="cd_next">Successivo</string>
    <string name="cd_random">Random</string>
    <string name="back">Indietro</string>
    <string name="cd_scan">Scansiona libreria</string>
    <string name="cd_more_options">Altre opzioni</string>
    <string name="action_scan_library">Aggiorna libreria</string>
    <string name="cd_play_all">Riproduci tutto</string>
    <string name="cd_search">Ricerca</string>
    <string name="title_edit_metadata">Modifica metadati</string>
    <string name="action_edit_metadata">Modifica</string>
    <string name="action_delete_file">Elimina</string>
    <string name="action_save">Salva</string>
    <string name="label_title">Titolo</string>
    <string name="label_artist">Artista</string>
    <string name="label_album_artist">Artista album</string>
    <string name="label_album">Album</string>
    <string name="name_album">Album</string>
    <string name="label_year">Anno</string>
    <string name="label_track_number">Numero traccia</string>
    <string name="label_genre">Genere</string>
    <string name="success_metadata_saved">Metadati salvati</string>
    <string name="error_metadata_save">Errore nel salvataggio</string>
    <string name="error_permission_denied">Permesso negato</string>
    <string name="error_write_request">Impossibile richiedere il permesso</string>
    <string name="no_artist">Nessun artista</string>
    <string name="no_album">Nessun album</string>
    <string name="other_options">Altre opzioni</string>
    <string name="modifica_copertina">Modifica copertina</string>
    <string name="copertina">Copertina album</string>
    <string name="hint_research">Cerca brani, artista, album</string>
    <string name="no_playlist">Nessuna playlist</string>
    <string name="new_playlist">Nuova playlist</string>
    <string name="tabs_navigation">Schede di navigazione</string>
    <string name="reorder">Riordina</string>
</resources>